<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_item"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/imageAvtar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/text_sub"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/highlight_round_btn"
                    android:includeFontPadding="false"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/my_subscription"
                android:textColor="@color/home_header_text"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/plan_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCurrentPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/current_plan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/textExpiresOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/expire_on"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/changePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/highlight_round_btn"
                    android:includeFontPadding="false"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/upgrade_plan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_invoice"
                android:textColor="@color/home_header_text"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/plan_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/last_invoice_date"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textLsPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/last_invoice_plan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textLsAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/last_invoice_amount"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>